# assimp_catkin

./: CMakeLists.txt  README.md  package.xml
cmake/: assimp-extras.cmake.in
